--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,27 +14,41 @@ services:
     - ./orw/xinetd:/etc/xinetd.d/orw:ro
    ports:
     - "10001:4597"
+  #leaked-flag: 
+  # build: ./leaked-flag/
+  # volumes:
+  #  - ./leaked-flag/share:/home/leaked-flag:ro
+  #  - ./leaked-flag/xinetd:/etc/xinetd.d/leaked-flag:ro
+  # ports:
+  #  - "10002:4597"
+  ppap: 
+   build: ./ppap/
+   volumes:
+    - ./ppap/share:/home/ppap:ro
+    - ./ppap/xinetd:/etc/xinetd.d/ppap:ro
+   ports:
+    - "10002:4597"
   hello: 
    build: ./hello/
    volumes:
     - ./hello/share:/home/hello:ro
     - ./hello/xinetd:/etc/xinetd.d/hello:ro
    ports:
-    - "10002:4597"
+    - "10003:4597"
   shellcode-2019: 
    build: ./shellcode-2019/
    volumes:
     - ./shellcode-2019/share:/home/shellcode-2019:ro
     - ./shellcode-2019/xinetd:/etc/xinetd.d/shellcode-2019:ro
    ports:
-    - "10003:4597"
+    - "10004:4597"
   secure-bof: 
    build: ./secure-bof/
    volumes:
     - ./secure-bof/share:/home/secure-bof:ro
     - ./secure-bof/xinetd:/etc/xinetd.d/secure-bof:ro
    ports:
-    - "10004:4597"
+    - "10005:4597"
   box: 
    build: ./box/
    volumes:
