--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,3 +56,10 @@ services:
     - ./box/xinetd:/etc/xinetd.d/box:ro
    ports:
     - "10006:4597"
+  box++: 
+   build: ./box++/
+   volumes:
+    - ./box++/share:/home/box++:ro
+    - ./box++/xinetd:/etc/xinetd.d/box++:ro
+   ports:
+    - "10007:4597"
